--- a/src/main/resources/static/css/styleCad.css
+++ b/src/main/resources/static/css/styleCad.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 .formPessoa{
 	box-shadow: 0px 0px 5px red;
@@ -46,6 +46,14 @@
 	margin-top: 20px;
 }
 
+.espaco{
+	height: 10px;
+	margin-top: 20px;
+	margin-bottom: 20pc;
+	padding: 10px;
+	font-size: 16px;
+}
+
 .formTelefone{
 	box-shadow: 0px 0px 5px red;
 	padding-top: 10px;
@@ -63,5 +71,15 @@
 	padding-bottom: 10px;
 	padding-right: 10px;
 	margin-top: 20px;
+}
+
+.login{
+	box-shadow: 0px 0px 5px red;
+	padding-top: 10px;
+	padding-left: 20px;
+	padding-bottom: 10px;
+	padding-right: 10px;
+	margin-top: 20px;
+	font-size: 18px;
 }
 
