--- a/src/main/resources/templates/cadastro/cadastrotelefones.html
+++ b/src/main/resources/templates/cadastro/cadastrotelefones.html
@@ -9,16 +9,12 @@
 <title>App</title>
 
 <!-- CSS  -->
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-	rel="stylesheet">
-<link href="../css/materialize.css" type="text/css" rel="stylesheet"
-	media="screen,projection" />
-<link href="../css/style.css" type="text/css" rel="stylesheet"
-	media="screen,projection" />
-<link href="../css/styleCad.css" type="text/css" rel="stylesheet"
-	media="screen,projection" />
-<link type="text/css" rel="stylesheet"
-	href="../materialize/css/materialize.min.css" media="screen,projection" />
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!-- <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" /> -->
+<!-- <link type="text/css" rel="stylesheet" href="../materialize/css/materialize.min.css" media="screen,projection" /> -->
+<link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+<link href="../css/styleCad.css" type="text/css" rel="stylesheet" media="screen,projection" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 <body>
 	<nav class="light-blue lighten-1" role="navigation">
